--- a/public/css/base/_globals.css
+++ b/public/css/base/_globals.css
@@ -3,7 +3,7 @@
 body {
   font-family: 'Titillium Web', sans-serif;
   font-size: 0.8em;
-  color: var(--color-text);
+  color: var(--color-font);
 }
 
 *,
