--- a/public/css/elements/_btnPanel.css
+++ b/public/css/elements/_btnPanel.css
@@ -27,7 +27,7 @@
     left: 0;
     right: 0;
     z-index: 99;
-    color: var(--color-text);
+    color: var(--color-font);
     background: var(--color-base-tertiary);
     overflow: hidden;
     padding: 1em 1.5em;
@@ -49,7 +49,7 @@
       left: 0;
       right: 0;
       z-index: 99;
-      color: var(--color-text);
+      color: var(--color-font);
       background: var(--color-base-tertiary);
       overflow: hidden;
       padding: 1em 1.5em;
