--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -4,7 +4,7 @@
 
 dialog {
   background-color: var(--color-base);
-  color: var(--color-text);
+  color: var(--color-font);
 
   & > button.close {
     position: absolute;
