--- a/public/css/elements/_searchbox.css
+++ b/public/css/elements/_searchbox.css
@@ -17,7 +17,7 @@
 
     & > li {
       padding: 5px;
-      color: var(--color-text);
+      color: var(--color-font);
     }
 
     & > li:hover {
@@ -33,7 +33,7 @@
       padding: 0 2px;
       margin-right: 2px;
       border-radius: 2px;
-      color: var(--color-text);
+      color: var(--color-font);
       font-size: 80%;
       font-weight: bold;
       background-color: var(--color-hover);
