--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -42,11 +42,11 @@ body {
   color: var(--color-base-tertiary);
 }
 .off-black {
-  color: var(--color-text);
+  color: var(--color-font);
 }
 .off-black-background {
   color: var(--color-base-tertiary);
-  background-color: var(--color-text);
+  background-color: var(--color-font);
 }
 .on-colour {
   color: var(--color-active);
@@ -93,15 +93,15 @@ body {
   button,
   .dropdown > .head {
     background-color: var(--color-changed);
-    color: var(--color-text);
+    color: var(--color-font);
   }
   label.checkbox {
     background-color: var(--color-changed);
-    color: var(--color-text);
+    color: var(--color-font);
     border-radius: 2px;
   }
   .material-symbols-outlined:after {
-    color: var(--color-text);
+    color: var(--color-font);
   }
 }
 @media only screen and (max-width: 768px) {
@@ -177,7 +177,7 @@ button {
 body {
   font-family: "Titillium Web", sans-serif;
   font-size: 0.8em;
-  color: var(--color-text);
+  color: var(--color-font);
 }
 *,
 *::after,
@@ -965,7 +965,7 @@ textarea {
   border: none;
   border-bottom: 1px dotted var(--color-border);
   background-color: var(--color-base-contrast);
-  color: var(--color-text);
+  color: var(--color-font);
   border-radius: 3px;
   &:focus {
     outline: none;
@@ -1009,7 +1009,7 @@ input[type=number] {
   }
 }
 input[type=search]::after {
-  color: var(--color-text);
+  color: var(--color-font);
 }
 input[type=search]:focus + ul,
 input[type=search] + ul:active {
@@ -1129,7 +1129,7 @@ dialog.alert-confirm {
     left: 0;
     right: 0;
     z-index: 99;
-    color: var(--color-text);
+    color: var(--color-font);
     background: var(--color-base-tertiary);
     overflow: hidden;
     padding: 1em 1.5em;
@@ -1149,7 +1149,7 @@ dialog.alert-confirm {
       left: 0;
       right: 0;
       z-index: 99;
-      color: var(--color-text);
+      color: var(--color-font);
       background: var(--color-base-tertiary);
       overflow: hidden;
       padding: 1em 1.5em;
@@ -1225,7 +1225,7 @@ label.checkbox {
 }
 dialog {
   background-color: var(--color-base);
-  color: var(--color-text);
+  color: var(--color-font);
   & > button.close {
     position: absolute;
     top: 0em;
@@ -1298,7 +1298,7 @@ dialog {
 .drawer {
   padding: 2px;
   background-color: var(--color-base-tertiary);
-  color: var(--color-text);
+  color: var(--color-font);
   &.expandable:not(.empty) > .header:hover {
     cursor: pointer;
   }
@@ -1325,7 +1325,7 @@ dialog {
   & > .header {
     display: flex;
     align-items: center;
-    color: var(--color-text);
+    color: var(--color-font);
     .material-symbols-outlined {
       font-size: 1.5em;
     }
@@ -1386,7 +1386,7 @@ dialog {
     padding: 5px;
     display: flex;
     align-items: center;
-    color: var(--color-text);
+    color: var(--color-font);
     & > :first-child {
       pointer-events: none;
       overflow: hidden;
@@ -1405,7 +1405,7 @@ dialog {
   }
   & > ul {
     background-color: var(--color-base-tertiary);
-    color: var(--color-text);
+    color: var(--color-font);
     display: none;
     position: absolute;
     max-height: 500px;
@@ -1418,7 +1418,7 @@ dialog {
     z-index: 997;
     & > li {
       padding: 5px;
-      color: var(--color-text);
+      color: var(--color-font);
     }
     & > li:hover {
       background-color: var(--color-hover);
@@ -1430,7 +1430,7 @@ dialog {
     & .label {
       padding: 0 6px;
       border-radius: 2px;
-      color: var(--color-text);
+      color: var(--color-font);
       font-size: 80%;
       font-weight: bold;
       background-color: var(--color-hover);
@@ -1508,7 +1508,7 @@ dialog {
     z-index: 999;
     & > li {
       padding: 5px;
-      color: var(--color-text);
+      color: var(--color-font);
     }
     & > li:hover {
       background-color: var(--color-hover);
@@ -1521,7 +1521,7 @@ dialog {
       padding: 0 2px;
       margin-right: 2px;
       border-radius: 2px;
-      color: var(--color-text);
+      color: var(--color-font);
       font-size: 80%;
       font-weight: bold;
       background-color: var(--color-hover);
@@ -1947,7 +1947,7 @@ dialog {
     display: flex;
     background-color: var(--color-base);
     & > .tab > .header {
-      color: var(--color-text);
+      color: var(--color-font);
       min-width: 8em;
       height: 100%;
       display: flex;
@@ -1999,7 +1999,7 @@ dialog {
     color: var(--color-accent);
   }
   .tabulator-row {
-    color: var(--color-text);
+    color: var(--color-font);
     &.tabulator-row-odd {
       background-color: var(--color-base-secondary);
     }
