--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -18,7 +18,7 @@
 
   &.expandable > .header > .material-symbols-outlined.caret::after {
     content: 'keyboard_arrow_down';
-    color: var(--color-text-secondary);
+    color: var(--color-font-mid);
     line-height: 1.5em;
   }
 
@@ -28,7 +28,7 @@
 
   &.expanded > .header > .material-symbols-outlined.caret::after {
     content: 'keyboard_arrow_up';
-    color: var(--color-text-secondary);
+    color: var(--color-font-mid);
     line-height: 1.5em;
   }
 
