--- a/public/css/base/_globals.css
+++ b/public/css/base/_globals.css
@@ -24,7 +24,7 @@ body {
 a {
   text-decoration: none;
   font-weight: bold;
-  color: var(--color-accent);
+  color: var(--color-primary);
 }
 
 li {
