--- a/public/css/elements/_slider.css
+++ b/public/css/elements/_slider.css
@@ -28,7 +28,7 @@
     background: linear-gradient(
       0deg,
       transparent 0 45%,
-      var(--color-accent) 45% 55%,
+      var(--color-primary) 45% 55%,
       transparent 55% 100%
     );
     content: '';
@@ -53,7 +53,7 @@
       background: linear-gradient(
         0deg,
         transparent 0 45%,
-        var(--color-accent) 45% 55%,
+        var(--color-primary) 45% 55%,
         transparent 55% 100%
       );
       content: '';
