--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -3,7 +3,7 @@ button {
   outline: none;
   background: none;
   text-align: center;
-  color: var(--color-accent);
+  color: var(--color-primary);
 
   > .material-symbols-outlined {
     pointer-events: none;
