border colour box shadows.

--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -43,7 +43,7 @@ button {
   &.raised {
     border-radius: 3px;
     border: 1px solid var(--color-border);
-    box-shadow: 1px 1px 2px var(--color-base-secondary);
+    box-shadow: 1px 1px 2px var(--color-border);
     padding: 0.3em;
 
     &.active {
