--- a/public/css/elements/_btnPanel.css
+++ b/public/css/elements/_btnPanel.css
@@ -4,7 +4,7 @@
   background-color: var(--color-base-tertiary);
   border: 1px solid var(--color-border);
   border-radius: 3px;
-  box-shadow: 1px 1px 3px var(--color-base-secondary);
+  box-shadow: 1px 1px 3px var(--color-border);
 
   & .header {
     display: flex;
@@ -33,7 +33,7 @@
     padding: 1em 1.5em;
     opacity: 0;
     border-radius: 3px;
-    box-shadow: 1px 1px 3px var(--color-base-secondary);
+    box-shadow: 1px 1px 3px var(--color-border);
     pointer-events: none;
     transition: 0.2s ease-in-out;
 
@@ -55,7 +55,7 @@
       padding: 1em 1.5em;
       opacity: 0;
       border-radius: 3px;
-      box-shadow: 1px 1px 3px var(--color-base-secondary);
+      box-shadow: 1px 1px 3px var(--color-border);
       pointer-events: none;
       transition: 0.2s ease-in-out;
 
