--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -75,7 +75,7 @@
 
   &.raised {
     border-radius: 2px;
-    box-shadow: 1px 1px 3px var(--color-base-secondary);
+    box-shadow: 1px 1px 3px var(--color-border);
     border: 1px solid var(--color-border);
   }
 
