--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -44,7 +44,7 @@
     max-height: 500px;
     overflow-y: auto;
     overflow-x: hidden;
-    box-shadow: 1px 1px 3px var(--color-base-secondary);
+    box-shadow: 1px 1px 3px var(--color-border);
     border: 1px solid var(--color-border);
     margin-top: -1px;
     text-align: left;
