--- a/public/css/elements/_searchbox.css
+++ b/public/css/elements/_searchbox.css
@@ -9,7 +9,7 @@
     max-height: 500px;
     overflow-y: auto;
     overflow-x: hidden;
-    box-shadow: 1px 1px 3px var(--color-base-secondary);
+    box-shadow: 1px 1px 3px var(--color-border);
     margin-top: -1px;
     text-align: left;
     background-color: var(--color-base-tertiary);
