--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -57,7 +57,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 5px 10px;
-    border-bottom: 1px solid var(--color-base-secondary);
+    border-bottom: 1px solid var(--color-border);
     padding: 0;
 
     & > .header {
