--- a/public/css/layout/_popup.css
+++ b/public/css/layout/_popup.css
@@ -29,7 +29,7 @@
   }
 
   & li:hover {
-    background: var(--color-base-secondary);
+    background-color: var(--color-base-secondary);
     cursor: pointer;
   }
 
