--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -134,7 +134,7 @@ body {
       display: inline-block;
       white-space: nowrap;
       line-height: 1;
-      background: var(--color-base-secondary);
+      background-color: var(--color-base-secondary);
       padding: 0 1px;
       border-radius: 2px;
       border-bottom: 1px solid var(--color-border);
@@ -250,7 +250,7 @@ body {
     list-style-type: none;
   }
   & li:hover {
-    background: var(--color-base-secondary);
+    background-color: var(--color-base-secondary);
     cursor: pointer;
   }
   .list {
