--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -161,7 +161,7 @@ button {
   &.raised {
     border-radius: 3px;
     border: 1px solid var(--color-border);
-    box-shadow: 1px 1px 2px var(--color-base-secondary);
+    box-shadow: 1px 1px 2px var(--color-border);
     padding: 0.3em;
     &.active {
       box-shadow: none;
@@ -1108,7 +1108,7 @@ dialog.alert-confirm {
   background-color: var(--color-base-tertiary);
   border: 1px solid var(--color-border);
   border-radius: 3px;
-  box-shadow: 1px 1px 3px var(--color-base-secondary);
+  box-shadow: 1px 1px 3px var(--color-border);
   & .header {
     display: flex;
     justify-content: space-between;
@@ -1134,7 +1134,7 @@ dialog.alert-confirm {
     padding: 1em 1.5em;
     opacity: 0;
     border-radius: 3px;
-    box-shadow: 1px 1px 3px var(--color-base-secondary);
+    box-shadow: 1px 1px 3px var(--color-border);
     pointer-events: none;
     transition: 0.2s ease-in-out;
     & .content {
@@ -1154,7 +1154,7 @@ dialog.alert-confirm {
       padding: 1em 1.5em;
       opacity: 0;
       border-radius: 3px;
-      box-shadow: 1px 1px 3px var(--color-base-secondary);
+      box-shadow: 1px 1px 3px var(--color-border);
       pointer-events: none;
       transition: 0.2s ease-in-out;
       & .content {
@@ -1352,7 +1352,7 @@ dialog {
   }
   &.raised {
     border-radius: 2px;
-    box-shadow: 1px 1px 3px var(--color-base-secondary);
+    box-shadow: 1px 1px 3px var(--color-border);
     border: 1px solid var(--color-border);
   }
   &.raised.empty {
@@ -1410,7 +1410,7 @@ dialog {
     max-height: 500px;
     overflow-y: auto;
     overflow-x: hidden;
-    box-shadow: 1px 1px 3px var(--color-base-secondary);
+    box-shadow: 1px 1px 3px var(--color-border);
     border: 1px solid var(--color-border);
     margin-top: -1px;
     text-align: left;
@@ -1500,7 +1500,7 @@ dialog {
     max-height: 500px;
     overflow-y: auto;
     overflow-x: hidden;
-    box-shadow: 1px 1px 3px var(--color-base-secondary);
+    box-shadow: 1px 1px 3px var(--color-border);
     margin-top: -1px;
     text-align: left;
     background-color: var(--color-base-tertiary);
@@ -1857,7 +1857,7 @@ dialog {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 5px 10px;
-    border-bottom: 1px solid var(--color-base-secondary);
+    border-bottom: 1px solid var(--color-border);
     padding: 0;
     & > .header {
       grid-column: 1 / 3;
@@ -1910,14 +1910,14 @@ dialog {
   height: 7px;
 }
 ::-webkit-scrollbar-track {
-  background: var(--color-base-secondary);
+  background-color: var(--color-base-secondary);
 }
 ::-webkit-scrollbar-thumb {
   background: var(--color-hover);
   border-radius: 3px;
 }
 ::-webkit-scrollbar-corner {
-  background: var(--color-base-secondary);
+  background-color: var(--color-base-secondary);
 }
 
 /* public/css/layout/_tabview.css */
