--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -26,7 +26,7 @@
     background-color: var(--color-base);
 
     & > .tab > .header {
-      color: var(--color-font);
+      color: var(--color-primary);
       min-width: 8em;
       height: 100%;
       display: flex;
