Location view - fix for caret on primary background;

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1865,6 +1865,9 @@ dialog {
       color: var(--color-base-tertiary);
       border-radius: 3px;
       padding: 0 0.5em;
+      & > .caret::after {
+        color: var(--color-font-contrast);
+      }
     }
     & .label,
     & .val {
