--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -10,7 +10,7 @@
     border-radius: 2px;
     font-size: 0.9em;
     font-weight: bold;
-    color: var(--color-base-tertiary);
+    color: var(--color-font-tertiary);
     background-color: var(--color-primary);
     user-select: none;
 
