--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -63,7 +63,7 @@
     & > .header {
       grid-column: 1 / 3;
       background-color: var(--color-primary);
-      color: var(--color-base-tertiary);
+      color: var(--color-font-tertiary);
       border-radius: 3px;
       padding: 0 0.5em;
 
