--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -90,7 +90,7 @@ body {
     display: block;
     margin: 1px;
     padding: 0;
-    color: var(--color-base-tertiary);
+    color: var(--color-font-tertiary);
     font-weight: 700;
     text-decoration: none;
     font-size: inherit;
