--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1070,7 +1070,7 @@ dialog.alert-confirm {
     padding: 0.5em 1em;
     background-color: var(--color-primary);
     border-bottom: solid 2px var(--color-border);
-    color: var(--color-font-tertiary);
+    color: var(--color-font-contrast);
     width: 100%;
   }
   .content {
@@ -1478,7 +1478,7 @@ dialog {
     border-radius: 2px;
     font-size: 0.9em;
     font-weight: bold;
-    color: var(--color-font-tertiary);
+    color: var(--color-font-contrast);
     background-color: var(--color-primary);
     user-select: none;
     button {
