--- a/public/css/elements/_searchbox.css
+++ b/public/css/elements/_searchbox.css
@@ -33,10 +33,10 @@
       padding: 0 2px;
       margin-right: 2px;
       border-radius: 2px;
-      color: var(--color-font);
+      color: var(--color-font-contrast);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-hover);
+      background-color: var(--color-primary);
     }
   }
 }
