--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1520,10 +1520,10 @@ dialog {
       padding: 0 2px;
       margin-right: 2px;
       border-radius: 2px;
-      color: var(--color-font);
+      color: var(--color-font-contrast);
       font-size: 80%;
       font-weight: bold;
-      background-color: var(--color-hover);
+      background-color: var(--color-primary);
     }
   }
 }
