--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1380,12 +1380,13 @@ dialog {
   &:disabled {
     pointer-events: none;
     opacity: 0.4;
+    color: var(--color-font);
   }
   & > .head {
     padding: 5px;
     display: flex;
     align-items: center;
-    color: var(--color-font);
+    color: var(--color-primary);
     & > :first-child {
       pointer-events: none;
       overflow: hidden;
