Dropdown - selected option is primary with contrasting text;

--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -62,7 +62,8 @@
     }
 
     & > li.selected {
-      background-color: var(--color-base-secondary);
+      background-color: var(--color-primary);
+      color: var(--color-font-contrast);
     }
 
     & .label {
