Dropdown - minor clean up;

--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -54,6 +54,8 @@
     & > li {
       padding: 5px;
       color: var(--color-font);
+      margin: 0 0.1em;
+      border-radius: 2px;
     }
 
     & > li:hover {
