Review colour schema and update dark_mode plugin (#1960)
* Review colour schema and update dark_mode plugin

* Removal of redundant variables;

Removed:
dm-color-dark
dm-color-darker
color-light

* Removed deprecated files;

* color-ok replaced with color-info.

* color-on replaced with color-accent-active;

Variables replaced
Legacy rule removed from button.

* color-no replaced with color-blocked;

* Temporary variable dm-color-base-primary.

dark-neutral renamed to --dm-color-base-primary;

* dark faded replaced

dm color faded replaced with color base secondary;

* Dark medium replaced;

Color dark medium replaced with temporary dm color base tertiary;

* Dark mode color light replaced;

Dm color light is now temporary dm-color-accent-primary.

* Dark mode colours unified;

* Unified naming;

primary as redundant;

* color-mid replaced;

color-mid variable used only for box shadow now replaced with color-base-secondary.

* color input border - now replaced with color-base-secondary.

* Renamed color-light-tertiary.

color-light-tertiary is now color-base-tertiary.

* Renamed variable.

color-light-secondary is now color-base-secondary.

* Removed variable.

off-light now replaced with base-secondary.

* color-primary-light replaced.

* Renamed variable;

color-off-black is now color-text.

* variable renamed;

color-primary is now color-accent.

* Formatting;

* Header - matched color variable in dark mode;

* Removed deprecated files;

* updated ui css;

* Dark mode border color value;

* Colour switch with new colours;

Dark mode now sets new colour palette.
Fixed rules for vertical divider and dropdown head text.

* Dark mode plugin formatting;

* Dark mode - icon switch fix;

The icon name setting fix.

* Colour corrections for elements.

Added colour rules where dark mode redundant rules were needed.

* inputs - colour variables included;

* inputs css - formatting;

* edited values - colour fix;

* dialogs - colour variables aligned;

* Dark mode - colours

--- a/public/css/base/_icons.css
+++ b/public/css/base/_icons.css
@@ -15,7 +15,7 @@
 }
 
 .mask-icon {
-  background-color: var(--color-primary-light);
+  background-color: var(--color-font-mid);
 
   mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat;
@@ -36,11 +36,11 @@
   }
 
   &.on {
-    background-color: var(--color-on);
+    background-color: var(--color-active);
   }
 
   &.no {
-    background-color: var(--color-no);
+    background-color: var(--color-danger);
   }
 }
 
@@ -651,7 +651,7 @@
 
   &.on::after {
     content: 'toggle_on';
-    color: var(--color-on);
+    color: var(--color-active);
   }
 
   &.disabled {
