--- a/public/css/elements/_alert_confirm.css
+++ b/public/css/elements/_alert_confirm.css
@@ -15,8 +15,8 @@ dialog.alert-confirm {
   h4 {
     padding: 0.5em 1em;
     background-color: var(--color-primary);
-    border-bottom: solid 2px var(--color-primary-light);
-    color: var(--color-light);
+    border-bottom: solid 2px var(--color-border);
+    color: var(--color-font-contrast);
     width: 100%;
   }
 
