--- a/public/css/layout/_map_attribution.css
+++ b/public/css/layout/_map_attribution.css
@@ -31,8 +31,10 @@ body {
       display: inline-block;
       white-space: nowrap;
       line-height: 1;
-      background: #fff9;
-      border-bottom: 2px solid var(--color-primary-light);
+      background-color: var(--color-base-secondary);
+      padding: 0 1px;
+      border-radius: 2px;
+      border-bottom: 1px solid var(--color-border);
     }
   }
 }
