--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -11,8 +11,8 @@
 }
 
 .box-shadow {
-  border: 1px solid var(--color-off-light);
-  box-shadow: 2px 2px 4px var(--color-primary-light);
+  border: 1px solid var(--color-border);
+  box-shadow: var(--color-border) 0px 1px 4px;
 }
 
 .bold {
@@ -33,23 +33,26 @@
 }
 
 .val-changed {
-  input,
-  input[type='text'] {
+  input[type='number'],
+  input[type='text'],
+  input[type='search'],
+  input[type='date'],
+  input[type='datetime-local'],
+  textarea,
+  button,
+  .dropdown > .head {
     background-color: var(--color-changed);
-  }
-
-  textarea {
-    background-color: var(--color-changed);
-  }
-
-  button {
-    background-color: var(--color-changed);
+    color: var(--color-font);
   }
 
   label.checkbox {
     background-color: var(--color-changed);
-    color: var(--color-off-black);
+    color: var(--color-font);
     border-radius: 2px;
+  }
+
+  .material-symbols-outlined:after {
+    color: var(--color-font);
   }
 }
 
