--- a/public/css/layout/_scrollbar.css
+++ b/public/css/layout/_scrollbar.css
@@ -4,14 +4,14 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--color-light-secondary);
+  background-color: var(--color-base-secondary);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--color-primary-light);
+  background: var(--color-hover);
   border-radius: 3px;
 }
 
 ::-webkit-scrollbar-corner {
-  background: var(--color-light-secondary);
+  background-color: var(--color-base-secondary);
 }
