--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -1,28 +1,21 @@
 /* public/css/base/_colours.css */
 :root {
-  --color-off-black: #3f3f3f;
   --color-primary: #003d57;
-  --color-primary-light: #939faa;
-  --color-light: #ffffff;
-  --color-off-light: #eeeeee;
-  --color-light-secondary: #f2f2f2;
-  --color-light-tertiary: #fafafa;
-  --color-mid: #e3e3e3;
-  --color-on: #d57120;
-  --color-no: #a21309;
+  --color-base: #f2f2f2;
+  --color-base-secondary: #f7f7f7;
+  --color-base-tertiary: #fafafa;
+  --color-border: #dddddd;
+  --color-font: #3f3f3f;
+  --color-font-mid: #858585;
+  --color-font-contrast: #ffffff;
+  --color-active: #d57120;
+  --color-hover: #939faa;
   --color-changed: #ffffa7;
-  --color-ok: #0b6f50;
-  --color-input-border: #ccc;
-  --dm-color-on: #e18335;
-  --dm-color-medium: #555555;
-  --dm-color-dark-faded: #333333;
-  --dm-color-dark-neutral: #222222;
-  --dm-color-dark: #111111;
-  --dm-color-darker: #151515;
-  --dm-color-light: #ffffff;
-  --dm-color-light-secondary: #f2f2f2;
-  --dm-color-light-darker: #d8d8d8;
-  --dm-color-no: #ef5350;
+  --color-info: #0b6f50;
+  --color-danger: #a21309;
+}
+body {
+  background-color: var(--color-base);
 }
 * {
   transition: 0.2s ease-in-out;
@@ -30,32 +23,32 @@
 }
 .primary-colour {
   color: var(--color-primary);
+  &.active {
+    color: var(--color-active);
+  }
 }
 .primary-background {
-  color: var(--color-light);
+  color: var(--color-font-contrast);
   background-color: var(--color-primary);
 }
 .light-background {
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
 }
 .light-colour {
-  color: var(--color-light);
-}
-.lighter-background {
-  background-color: var(--color-light-secondary);
+  color: var(--color-base-tertiary);
 }
 .off-black {
-  color: var(--color-off-black);
+  color: var(--color-font);
 }
 .off-black-background {
-  color: var(--color-light);
-  background-color: var(--color-off-black);
+  color: var(--color-base-tertiary);
+  background-color: var(--color-font);
 }
 .on-colour {
-  color: var(--color-on);
+  color: var(--color-active);
 }
 .no-colour {
-  color: var(--color-no);
+  color: var(--color-danger);
 }
 
 /* public/css/layout/_ol.css */
@@ -64,9 +57,9 @@
   background: none;
 }
 .ol-scale-line-inner {
-  border: 2px solid var(--color-off-black);
+  border: 2px solid var(--color-font);
   border-top: none;
-  color: var(--color-off-black);
+  color: var(--color-font);
   text-align: center;
   margin: 1px;
   will-change: contents, width;
@@ -97,7 +90,7 @@
     display: block;
     margin: 1px;
     padding: 0;
-    color: var(--color-light);
+    color: var(--color-font-contrast);
     font-weight: 700;
     text-decoration: none;
     font-size: inherit;
@@ -141,8 +134,10 @@ body {
       display: inline-block;
       white-space: nowrap;
       line-height: 1;
-      background: #fff9;
-      border-bottom: 2px solid var(--color-primary-light);
+      background-color: var(--color-base-secondary);
+      padding: 0 1px;
+      border-radius: 2px;
+      border-bottom: 1px solid var(--color-border);
     }
   }
 }
@@ -220,7 +215,7 @@ body {
   z-index: 998;
   margin: 0;
   padding: 5px;
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
   opacity: 0;
   transition-property: opacity;
   transition-duration: 0.3s;
@@ -230,7 +225,9 @@ body {
 /* public/css/layout/_popup.css */
 .popup {
   position: absolute;
-  background-color: var(--color-light);
+  background-color: var(--color-base-tertiary);
+  color: var(--color-font);
+  border: solid 1px var(--color-border);
   bottom: 12px;
   transform: translate(-50%, 0);
   &::after,
@@ -241,7 +238,7 @@ body {
     pointer-events: none;
   }
   &::after {
-    border-top-color: var(--color-light);
+    border-top-color: var(--color-border);
     border-width: 10px;
     left: 50%;
     margin-left: -10px;
@@ -253,7 +250,7 @@ body {
     list-style-type: none;
   }
   & li:hover {
-    background: var(--color-light-secondary);
+    background-color: var(--color-base-secondary);
     cursor: pointer;
   }
   .list {
