Revert "icons stylesheet - removed import and deleted."
This reverts commit 526cb6bbe5fd7ed47662d61e9e71916a2a9dc2ba.

--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -6,6 +6,8 @@
 
 @import url('./base/_globals.css');
 
+@import url('./base/_icons.css');
+
 @import url('./base/_inputs.css');
 
 @import url('./base/_material_icons.css');
