--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -34,6 +34,8 @@
 
 @import url('./layout/_cloudinary.css');
 
+@import url('./layout/_image_preview.css');
+
 @import url('./layout/_layerview.css');
 
 @import url('./layout/_locationview.css');
