--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -54,7 +54,7 @@
       }
 
       #ctrls {
-        z-index: 9999;
+        isolation: isolate;
       }
 
       #ctrl-tabs {
@@ -347,7 +347,8 @@
         // Create the Dialog.node
         mapp.ui.elements.dialog({
           css_style:
-            'padding: 1em; border-color: #000; z-index:9999; max-width: 50%;',
+            'padding: 1em; max-width: 50%;',
+          header: mapp.utils.html`<h4>${mapp.dictionary.information}`,
           content: mapp.dictionary.no_locales,
           target: document.body,
           top: '40%',
@@ -416,7 +417,8 @@
       if (!locale.layers?.length && !(locale instanceof Error)) {
         mapp.ui.elements.dialog({
           css_style:
-            'padding: 1em; border-color: #000; z-index:9999; max-width: 50%;',
+            'padding: 1em; max-width: 50%;',
+          header: mapp.utils.html`<h4>${mapp.dictionary.information}`,
           content: mapp.dictionary.no_layers,
           target: document.body,
           top: '40%',
