--- a/public/css/elements/_btnPanel.css
+++ b/public/css/elements/_btnPanel.css
@@ -26,7 +26,7 @@
     bottom: 15em;
     left: 0;
     right: 0;
-    z-index: 99;
+    isolation: auto;
     color: var(--color-font);
     background: var(--color-base-tertiary);
     overflow: hidden;
@@ -48,7 +48,7 @@
       bottom: 15em;
       left: 0;
       right: 0;
-      z-index: 99;
+      isolation: auto;
       color: var(--color-font);
       background: var(--color-base-tertiary);
       overflow: hidden;
