--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -5,6 +5,7 @@
 dialog {
   background-color: var(--color-base);
   color: var(--color-font);
+  isolation: isolate;
 
   & > button.close {
     position: absolute;
@@ -13,6 +14,10 @@ dialog {
     height: 1em;
     width: 1em;
     margin: 0.4em;
+  }
+
+  &:focus {
+    outline: none;
   }
 
   & > header {
@@ -45,24 +50,22 @@ dialog {
 
   &.dialog {
     position: absolute;
-    border: none !important;
+    border: none;
     border-radius: 2px;
     cursor: grab;
     user-select: none;
     padding: 5px;
     overflow: unset !important;
-    isolation: isolate;
   }
 
   &.modal {
     position: fixed;
-    border: none !important;
+    border: none;
     border-radius: 2px;
     text-wrap: wrap;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 9999;
   }
 
   .minimize-btn::after {
