--- a/public/css/layout/_divider.css
+++ b/public/css/layout/_divider.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: 3px 0px 6px -3px var(--color-base-tertiary);
-  z-index: 9999;
+  isolation: isolate;
 
   &:hover {
     cursor: col-resize;
