--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -351,7 +351,6 @@ input[type=search]::-webkit-search-cancel-button:hover {
 dialog.alert-confirm {
   width: 350px;
   max-height: 70%;
-  z-index: 1001;
   user-select: none;
   &::-webkit-scrollbar {
     display: none;
@@ -420,7 +419,7 @@ dialog.alert-confirm {
     bottom: 15em;
     left: 0;
     right: 0;
-    z-index: 99;
+    isolation: auto;
     color: var(--color-font);
     background: var(--color-base-tertiary);
     overflow: hidden;
@@ -440,7 +439,7 @@ dialog.alert-confirm {
       bottom: 15em;
       left: 0;
       right: 0;
-      z-index: 99;
+      isolation: auto;
       color: var(--color-font);
       background: var(--color-base-tertiary);
       overflow: hidden;
@@ -518,6 +517,7 @@ label.checkbox {
 dialog {
   background-color: var(--color-base);
   color: var(--color-font);
+  isolation: isolate;
   & > button.close {
     position: absolute;
     top: 0em;
@@ -525,6 +525,9 @@ dialog {
     height: 1em;
     width: 1em;
     margin: 0.4em;
+  }
+  &:focus {
+    outline: none;
   }
   & > header {
     display: flex;
@@ -551,23 +554,21 @@ dialog {
   }
   &.dialog {
     position: absolute;
-    border: none !important;
+    border: none;
     border-radius: 2px;
     cursor: grab;
     user-select: none;
     padding: 5px;
     overflow: unset !important;
-    isolation: isolate;
   }
   &.modal {
     position: fixed;
-    border: none !important;
+    border: none;
     border-radius: 2px;
     text-wrap: wrap;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 9999;
   }
   .minimize-btn::after {
     content: "minimize";
@@ -670,6 +671,7 @@ dialog {
   background-color: var(--color-base-secondary);
   border: 1px solid var(--color-border);
   border-radius: 3px;
+  isolation: isolate;
   &:disabled {
     pointer-events: none;
     opacity: 0.4;
@@ -708,7 +710,6 @@ dialog {
     border: 1px solid var(--color-border);
     margin-top: -1px;
     text-align: left;
-    z-index: 997;
     & > li {
       padding: 5px;
       color: var(--color-font);
@@ -792,6 +793,7 @@ dialog {
   overflow: visible;
   position: relative;
   background-color: var(--color-base-tertiary);
+  isolation: isolate;
   & > ul {
     display: none;
     max-height: 500px;
@@ -801,7 +803,6 @@ dialog {
     margin-top: -1px;
     text-align: left;
     background-color: var(--color-base-tertiary);
-    z-index: 999;
     & > li {
       padding: 5px;
       color: var(--color-font);
@@ -957,7 +958,7 @@ dialog {
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: 3px 0px 6px -3px var(--color-base-tertiary);
-  z-index: 9999;
+  isolation: isolate;
   &:hover {
     cursor: col-resize;
   }
@@ -1001,7 +1002,7 @@ dialog {
     p {
       margin: auto;
       text-align: center;
-      color: var(----color-text);
+      color: var(--color-font);
       pointer-events: none;
       user-select: none;
       & > span {
@@ -1043,6 +1044,32 @@ dialog {
     width: 90px;
     height: 90px;
     flex-grow: 1;
+  }
+}
+
+/* public/css/layout/_image_preview.css */
+.interface-mask {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  isolation: isolate;
+  background-color: var(-color-base-secondary);
+  & > .bg-image {
+    margin: 5%;
+    height: 90%;
+    width: 90%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    & > .btn-close {
+      position: absolute;
+      top: 5%;
+      right: 5%;
+      width: 50px;
+      height: 50px;
+      background-color: var(--color-primary);
+    }
   }
 }
 
@@ -1353,30 +1380,6 @@ dialog {
   display: flex;
   flex-direction: column;
   gap: 5px;
-}
-.interface-mask {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999999;
-  background-color: #eeea;
-  & > .bg-image {
-    margin: 5%;
-    height: 90%;
-    width: 90%;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    & > .btn-close {
-      position: absolute;
-      top: 5%;
-      right: 5%;
-      width: 50px;
-      height: 50px;
-      background-color: var(--color-danger);
-    }
-  }
 }
 
 /* public/css/_ui.css */
