--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -24,12 +24,6 @@ body {
   transition: 0.2s ease-in-out;
   transition-property: background-color;
 }
-.primary-colour {
-  color: var(--color-primary);
-  &.active {
-    color: var(--color-active);
-  }
-}
 .off-black {
   color: var(--color-font);
 }
@@ -252,7 +246,7 @@ input[type=time],
 input[type=datetime-local] {
   background-color: var(--color-base);
   border: 1px solid var(--color-border);
-  color: var(--color-primary);
+  color: var(--color-font);
   padding: 5px;
   border-radius: 3px;
   &:focus {
@@ -264,7 +258,7 @@ input[type=number] {
   padding: 5px;
   border: none;
   background-color: var(--color-base);
-  color: var(--color-primary);
+  color: var(--color-font);
   border-bottom: 1px dotted var(--color-border);
   display: inline-block;
   width: 100%;
